force-app/main/default/objects/Opportunity/fields/Eligible_For_Ambassador_Commission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Ambassador_Commission__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3239</description>
    <label>Eligible For Ambassador Commission</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.TotalPrice</field>
        <operation>greaterOrEqual</operation>
        <value>1000</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>