force-app/main/default/objects/Opportunity/fields/Eligible_MINI_Sales_Opp__c.field-meta.xml
<CustomField>
    <fullName>Eligible_MINI_Sales_Opp__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2404</description>
    <formula>AND( ISPICKVAl(OppCategory__c,&quot;MINI by orderbird&quot;), !ISPICKVAL( Opportunity_type_1__c,&quot;MINI registration&quot;),
OR(
  NOT(IsClosed),
  AND(
    NOW()-Closed_Date_Time__c &lt;91,
    OR(
      ISPICKVAL(StageName, &quot;Closed Won&quot;),
      ISPICKVAL(LostRejectedReason__c, &quot;Opportunity Expired&quot;),
      ISPICKVAL(LostRejectedReason__c, &quot;Transfer to Nurturing&quot;)
    )
  )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible MINI Sales Opp</label>
    <type>Checkbox</type>
</CustomField>