force-app/main/default/objects/Opportunity/fields/ExistingCardTerminal__c.field-meta.xml
<CustomField>
    <fullName>ExistingCardTerminal__c</fullName>
    <description>Stakeholder: Sales &amp; PAY</description>
    <inlineHelpText>Does the venue already have a card terminal in place? Filled in by Sales</inlineHelpText>
    <label>Existing Card Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>other reader</fullName>
            </value>
            <value>
                <fullName>traditional/ wireless</fullName>
            </value>
            <value>
                <fullName>with cabel</fullName>
            </value>
            <value>
                <fullName>dont know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>