force-app/main/default/objects/Opportunity/fields/Expiration_Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Determination_Date__c</fullName>
    <formula>IF (
IF(ISNULL(LastActivityDate), DATEVALUE(CreatedDate), LastActivityDate) &lt; DATE(2019,08,07),
IF(ISNULL(LastActivityDate), DATEVALUE(CreatedDate), LastActivityDate) +90,
IF(ISNULL(LastActivityDate), DATEVALUE(CreatedDate), LastActivityDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Determination Date</label>
    <type>Date</type>
</CustomField>