force-app/main/default/objects/Opportunity/fields/Expiration_Warning_Mail_send__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Warning_Mail_send__c</fullName>
    <inlineHelpText>Temporary field for debugging</inlineHelpText>
    <label>Expiration Warning Mail send</label>
    <type>Date</type>
</CustomField>