force-app/main/default/objects/Opportunity/fields/Failed_Sequential_Calls__c.field-meta.xml
<CustomField>
    <fullName>Failed_Sequential_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-239</description>
    <inlineHelpText>How many calls in a row have failed? Gets filled automatically</inlineHelpText>
    <label>Failed Sequential Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>