force-app/main/default/objects/Opportunity/fields/First_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date_Time__c</fullName>
    <label>First Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>