force-app/main/default/objects/Opportunity/fields/First_Completed_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Completed_Demo_Date__c</fullName>
    <label>First Completed Demo Date</label>
    <type>Date</type>
</CustomField>