force-app/main/default/objects/Opportunity/fields/First_Successful_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Successful_Activity_Date_Time__c</fullName>
    <label>First Successful Activity Date/Time</label>
    <type>DateTime</type>
</CustomField>