force-app/main/default/objects/Opportunity/fields/FlaggedForReview__c.field-meta.xml
<CustomField>
    <fullName>FlaggedForReview__c</fullName>
    <description>Stakeholder: UNKNOWN</description>
    <inlineHelpText>!! Input needed !! 
What is meant by this one?</inlineHelpText>
    <label>Flagged for Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>