force-app/main/default/objects/Opportunity/fields/FounderAwardEntryDate__c.field-meta.xml
<CustomField>
    <fullName>FounderAwardEntryDate__c</fullName>
    <description>Stakeholders: MKT (Gründerpreis)</description>
    <inlineHelpText>When did the account apply for the Gastro Founder Award? Filled automatically on creation</inlineHelpText>
    <label>Founder Award Entry Date</label>
    <type>Date</type>
</CustomField>