force-app/main/default/objects/Opportunity/fields/FunnelLeadSource__c.field-meta.xml
<CustomField>
    <fullName>FunnelLeadSource__c</fullName>
    <description>Stakeholders: Sales</description>
    <inlineHelpText>What source did the prospect mention in the web2lead form on our homepage? Automatically filled on creation</inlineHelpText>
    <label>Funnel: Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Trade fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>