force-app/main/default/objects/Opportunity/fields/FunnelPOSInPlace__c.field-meta.xml
<CustomField>
    <fullName>FunnelPOSInPlace__c</fullName>
    <description>Stakeholders: Sales</description>
    <inlineHelpText>Did the prospect state to already have a POS in the web2lead form on our homepage? Automatically filled on creation</inlineHelpText>
    <label>Funnel: POS in place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>