force-app/main/default/objects/Opportunity/fields/FunnelReferer__c.field-meta.xml
<CustomField>
    <fullName>FunnelReferer__c</fullName>
    <description>Stakeholders: MKT</description>
    <inlineHelpText>Tracking field for Online Marketing. Gets automatically filled with URL parameters attached to our campaigns for web2lead. Carried over from Lead</inlineHelpText>
    <label>Funnel Referer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>