force-app/main/default/objects/Opportunity/fields/GroundworkPartner__c.field-meta.xml
<CustomField>
    <fullName>GroundworkPartner__c</fullName>
    <description>Stakeholder: PaM with Sales</description>
    <inlineHelpText>How well did the partner prepare the lead for us? Feedback for PaM which partners do a good job and justify nurturing, as well as which partners are in need of additional training. Filled in by Sales</inlineHelpText>
    <label>Groundwork Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>perfectly prepared</fullName>
            </value>
            <value>
                <fullName>well prepared</fullName>
            </value>
            <value>
                <fullName>cold call</fullName>
            </value>
            <value>
                <fullName>wrongly informed</fullName>
            </value>
            <value>
                <fullName>not reached</fullName>
            </value>
            <value>
                <fullName>lead sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>