force-app/main/default/objects/Opportunity/fields/LAC_Lookup__c.field-meta.xml
<CustomField>
    <fullName>LAC_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stakeholder: CDS, BI, MKT, Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>Enter the ID for relevant Lead Attribution Combo. Complete List unlike LAC Shorthand</inlineHelpText>
    <label>LAC Lookup</label>
    <referenceTo>LeadAttributeCombo__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>