force-app/main/default/objects/Opportunity/fields/LastSuccessfullCommunication__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfullCommunication__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Stakeholders: Sales &amp; CS</description>
    <inlineHelpText>When was the last successful communication with a representative of this account? Filled in automatically</inlineHelpText>
    <label>Last Successfull Communication</label>
    <type>Date</type>
</CustomField>