force-app/main/default/objects/Opportunity/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <description>Stakeholder: CDS, BI, MKT, Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>Details about the (marketing) channel the lead came through. Controlled via LAC</inlineHelpText>
    <label>Lead Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>