force-app/main/default/objects/Opportunity/fields/Lead_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Time__c</fullName>
    <formula>Converted_Lead__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date/Time</label>
    <type>DateTime</type>
</CustomField>