force-app/main/default/objects/Opportunity/fields/Lost_Reason_Guest_Management__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Guest_Management__c</fullName>
    <label>Lost Reason Guest Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too cost intensive</fullName>
            </value>
            <value>
                <fullName>Existing contract</fullName>
            </value>
            <value>
                <fullName>Too complicated</fullName>
            </value>
            <value>
                <fullName>No integration in orderbird</fullName>
            </value>
            <value>
                <fullName>Maybe later</fullName>
            </value>
            <value>
                <fullName>Crucial feature request</fullName>
            </value>
            <value>
                <fullName>Guest Registration only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>