force-app/main/default/objects/Opportunity/fields/Lost_Reason_Table_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Table_Reservation__c</fullName>
    <label>Lost Reason Table Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too cost intensive</fullName>
            </value>
            <value>
                <fullName>Existing contract</fullName>
            </value>
            <value>
                <fullName>Too complicated</fullName>
            </value>
            <value>
                <fullName>No integration in orderbird</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>