force-app/main/default/objects/Opportunity/fields/LostRejectedReason__c.field-meta.xml
<CustomField>
    <fullName>LostRejectedReason__c</fullName>
    <inlineHelpText>Indicates the lost reason for an opportunity. Required if Stage = Closed Lost</inlineHelpText>
    <label>Lost/ Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OppCategory__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Already Customer</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Apple only</fullName>
            </value>
            <value>
                <fullName>Cannot be reached</fullName>
            </value>
            <value>
                <fullName>Cannot be reached after first contact</fullName>
            </value>
            <value>
                <fullName>Closing down</fullName>
            </value>
            <value>
                <fullName>Contact details incorrect</fullName>
            </value>
            <value>
                <fullName>Corona Virus</fullName>
            </value>
            <value>
                <fullName>Crucial feature request</fullName>
            </value>
            <value>
                <fullName>Customer churned</fullName>
            </value>
            <value>
                <fullName>Customer closed down</fullName>
            </value>
            <value>
                <fullName>Data Quality Issue</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Existing cash register is being upgraded</fullName>
            </value>
            <value>
                <fullName>Foreign country / incompatible</fullName>
            </value>
            <value>
                <fullName>GM - already GM Customer (old model)</fullName>
            </value>
            <value>
                <fullName>GM - Crucial feature request</fullName>
            </value>
            <value>
                <fullName>GM - Existing contract</fullName>
            </value>
            <value>
                <fullName>GM - Guest Registration only</fullName>
            </value>
            <value>
                <fullName>GM - Maybe later</fullName>
            </value>
            <value>
                <fullName>GM - No integration in orderbird</fullName>
            </value>
            <value>
                <fullName>GM - Too complicated</fullName>
            </value>
            <value>
                <fullName>GM - Too cost intensive</fullName>
            </value>
            <value>
                <fullName>Insufficient reliability</fullName>
            </value>
            <value>
                <fullName>Internal Testing</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>MINI as Swarm device</fullName>
            </value>
            <value>
                <fullName>No/bad internet</fullName>
            </value>
            <value>
                <fullName>Only free version</fullName>
            </value>
            <value>
                <fullName>On-site demo / support needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>