force-app/main/default/objects/Opportunity/fields/Max_Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Quote_Value__c</fullName>
    <label>Max Quote Value</label>
    <summarizedField>Quote.Subtotal</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>