force-app/main/default/objects/Opportunity/fields/MC_Active__c.field-meta.xml
<CustomField>
    <fullName>MC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for Metro Cockpit campaign
Stakeholder Sales https://jira.orderbird.com/browse/CDS-2381</description>
    <label>MC Active</label>
    <type>Checkbox</type>
</CustomField>