force-app/main/default/objects/Opportunity/fields/MC_Turnover_cluster__c.field-meta.xml
<CustomField>
    <fullName>MC_Turnover_cluster__c</fullName>
    <description>Temporary field for Metro Cockpit campaign 
Stakeholder Sales https://jira.orderbird.com/browse/CDS-2381</description>
    <label>MC Turnover cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>