force-app/main/default/objects/Opportunity/fields/METRO_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>METRO_Lost_Reason__c</fullName>
    <description>Stakeholder: PaM &amp; HoReCa, part of Org2Org sharing</description>
    <inlineHelpText>What is the METRO relevant Lost Reason? Filled automatically!</inlineHelpText>
    <label>METRO Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing customer</fullName>
            </value>
            <value>
                <fullName>Open Opportunity already existing (Duplicate)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Customer not interested</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t speak language</fullName>
            </value>
            <value>
                <fullName>Wrong branch</fullName>
            </value>
            <value>
                <fullName>Contact details incomplete</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Website - Already has a website</fullName>
            </value>
            <value>
                <fullName>Website - Does not need a website</fullName>
            </value>
            <value>
                <fullName>Website - Does not need a website now. Maybe later</fullName>
            </value>
            <value>
                <fullName>Website - Maintenance effort too high</fullName>
            </value>
            <value>
                <fullName>Website - Will get a website from an agency</fullName>
            </value>
            <value>
                <fullName>Other Solutions - Doesn&apos;t need Digital Solutions</fullName>
            </value>
            <value>
                <fullName>Other Solutions - Already has sufficient Digital Solutions</fullName>
            </value>
            <value>
                <fullName>Other Solutions - Digital Solutions are too expensive</fullName>
            </value>
            <value>
                <fullName>Other - I don&apos;t buy via phone</fullName>
            </value>
            <value>
                <fullName>Other - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>