force-app/main/default/objects/Opportunity/fields/METROInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>METROInvoiceDate__c</fullName>
    <description>Stakeholder: PaM https://jira.orderbird.com/browse/CDS-248</description>
    <inlineHelpText>When has the the Opp been invoiced by METRO? Managed by Partner Management</inlineHelpText>
    <label>METRO Invoice Date</label>
    <type>Date</type>
</CustomField>