force-app/main/default/objects/Opportunity/fields/METROOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>METROOpportunityID__c</fullName>
    <description>Stakeholder: PaM (METRO)</description>
    <inlineHelpText>Opportunity ID in HoReCas SFDC org</inlineHelpText>
    <label>METRO Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>