force-app/main/default/objects/Opportunity/fields/METROpolitain__c.field-meta.xml
<CustomField>
    <fullName>METROpolitain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: PaM (METRO)</description>
    <inlineHelpText>Is this opportunity part of the METROpolitain Project? Only PaM and Leadmanagement are allowed to check!</inlineHelpText>
    <label>METROpolitain</label>
    <type>Checkbox</type>
</CustomField>