force-app/main/default/objects/Opportunity/fields/MINI_Quantitiy__c.field-meta.xml
<CustomField>
    <fullName>MINI_Quantitiy__c</fullName>
    <description>Used for MINI Quote generation https://jira.orderbird.com/browse/CDS-2603

To be deleted</description>
    <label>MINI Quantitiy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>