force-app/main/default/objects/Opportunity/fields/Missing_feature__c.field-meta.xml
<CustomField>
    <fullName>Missing_feature__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1457</description>
    <label>Missing feature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>