force-app/main/default/objects/Opportunity/fields/Most_recent_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_Demo_Date__c</fullName>
    <label>Most recent Demo Date</label>
    <type>DateTime</type>
</CustomField>