force-app/main/default/objects/Opportunity/fields/MSOP__c.field-meta.xml
<CustomField>
    <fullName>MSOP__c</fullName>
    <description>Stakeholder: PaM https://jira.orderbird.com/browse/CDS-27</description>
    <inlineHelpText>Does the opportunity fulfil all necessary requirements for MSOP? &quot;All-clear&quot; should only be set by Sales agent!</inlineHelpText>
    <label>MSOP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All-Clear</fullName>
            </value>
            <value>
                <fullName>Open METRO Opportunity Already Existing (Duplicate)</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Speak Language</fullName>
            </value>
            <value>
                <fullName>Wrong Branch</fullName>
            </value>
            <value>
                <fullName>Activity Within The Last 90 Days</fullName>
            </value>
            <value>
                <fullName>Customer Within The Last 6 Months</fullName>
            </value>
            <value>
                <fullName>Wrong Number/Email</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>