force-app/main/default/objects/Opportunity/fields/MSOPQualified__c.field-meta.xml
<CustomField>
    <fullName>MSOPQualified__c</fullName>
    <description>Stakeholder: PaM https://jira.orderbird.com/browse/CDS-248</description>
    <inlineHelpText>Has this Opportunity been qualified by METRO? managed by Partner Management</inlineHelpText>
    <label>MSOP Qualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>qualified</fullName>
            </value>
            <value>
                <fullName>unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>