force-app/main/default/objects/Opportunity/fields/NetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteId__c</fullName>
    <description>Stakeholder: NEST</description>
    <externalId>true</externalId>
    <inlineHelpText>Migration field! What was the original internal ID of this record&apos;s equivalent in NetSuite? The prefix describes the type of the Netsuite object. DO NOT TOUCH</inlineHelpText>
    <label>NetSuite ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>