force-app/main/default/objects/Opportunity/fields/NewBusiness__c.field-meta.xml
<CustomField>
    <fullName>NewBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business</label>
    <type>Checkbox</type>
</CustomField>