force-app/main/default/objects/Opportunity/fields/Newest_successful_activity__c.field-meta.xml
<CustomField>
    <fullName>Newest_successful_activity__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>CDS</description>
    <label>Newest successful activity</label>
    <type>DateTime</type>
</CustomField>