force-app/main/default/objects/Opportunity/fields/NewOpening__c.field-meta.xml
<CustomField>
    <fullName>NewOpening__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-35</description>
    <inlineHelpText>To indicate if it&apos;s a new opening. Will become required at Stage = Introduction / Demo</inlineHelpText>
    <label>New Opening</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>