force-app/main/default/objects/Opportunity/fields/Next_Step_PL__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_PL__c</fullName>
    <label>Next Step (PL)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Follow up</fullName>
            </value>
            <value>
                <fullName>Sales - Demand Analysis</fullName>
            </value>
            <value>
                <fullName>Sales - General Call</fullName>
            </value>
            <value>
                <fullName>Sales - Sales Talk</fullName>
            </value>
            <value>
                <fullName>Sales - Upselling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>