force-app/main/default/objects/Opportunity/fields/NextStepDate__c.field-meta.xml
<CustomField>
    <fullName>NextStepDate__c</fullName>
    <description>Stakeholder: Sales</description>
    <label>Next Step Date</label>
    <type>DateTime</type>
</CustomField>