force-app/main/default/objects/Opportunity/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <displayFormat>Opp-{000000}</displayFormat>
    <inlineHelpText>What is a short ID zu use for internal communication? Not intended for external use! Filled automatically</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>