force-app/main/default/objects/Opportunity/fields/Nurturing__c.field-meta.xml
<CustomField>
    <fullName>Nurturing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: MKT &amp; Sales</description>
    <inlineHelpText>Should the Primary Contact for this opp receive nurturing mails? It is recommended to always use nurturing! If the contact asks to stop the mails, please uncheck.</inlineHelpText>
    <label>Nurturing</label>
    <type>Checkbox</type>
</CustomField>