force-app/main/default/objects/Opportunity/fields/Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-1211</description>
    <inlineHelpText>Number of open tasks</inlineHelpText>
    <label>Open Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>